--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="primary">#f52c56</color>
     <color name="accent">#f52c56</color>
+    <color name="g_black">#33405f</color>
 </resources>
